--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "chromespring",
+	"name": "Kittens For Work",
 	"version": "0.0.1",
 	"description": "__MSG_app_description__",
 
@@ -16,7 +16,14 @@
 		"default_title": "Kittens For Work!"
 //		"default_popup": "page_action.html"
 	},
-	//"options_page": "options.html",
+	"content_scripts": [{
+		"run_at": "document_start",
+		"all_frames": true,
+		"js": ["src/content_script.js"],
+		"matches": [ "http://*/*", "https://*/*" ]
+	}],
+
+	"options_page": "options.html",
 	"permissions": [
 		"tabs", "http://ajax.googleapis.com/", "http://ajax.microsoft.com/", "http://api.flickr.com",
 		"http://*/*", "https://*/*"
